created package and making read mes now

--- a/rbpack/DESCRIPTION
+++ b/rbpack/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: rbpack
-Title: What the Package Does (One Line, Title Case)
+Title: Converts pounds to kilograms
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Raveen", "Badyal", , "rbadyal99@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: This package contains a function that converts pounds to kilograms.
+The input of this function may be limited as the output will display only two 
+decimal places.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
