--- a/rbpack/DESCRIPTION
+++ b/rbpack/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
 Description: This package contains a function that converts pounds to kilograms.
 The input of this function may be limited as the output will display only two 
 decimal places.
+Depends: R (>= 3.2.4)
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
